syntax = "proto3";
package outbe.allocationpool;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "amino/amino.proto";

import "cosmos/base/query/v1beta1/pagination.proto";

import "outbe/allocationpool/emission.proto";
import "outbe/allocationpool/supply.proto";
import "outbe/allocationpool/tribute.proto";
import "outbe/allocationpool/params.proto";

// this line is used by starport scaffolding # 1

option go_package = "github.com/outbe/outbe-node/x/allocationpool/types";

// Query defines the gRPC querier service.
service Query {

  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/outbe/allocationpool/params";
  }

  rpc GetBlockEmission(QueryBlockEmissionRequest) returns (QueryBlockEmissionResponse) {
    option (google.api.http).get               = "/outbe/allocationpool/emission/{block_number}";
  }

  rpc GetEmission(QueryEmissionRequest) returns (QueryEmissionResponse) {
    option (google.api.http).get               = "/outbe/allocationpool/emission";
  }

  rpc GetLimit(QueryLimitRequest) returns (QueryLimitResponse) {
    option (google.api.http).get               = "/outbe/allocationpool/limit";
  }

  // rpc GetTotalSupply(QueryTotalSupplyRequest) returns (QueryTotalSupplyResponse) {
  //   option (google.api.http).get               = "/outbe/allocationpool/totalsupply";
  // }

  rpc GetTributes(QueryTributesRequest) returns (QueryTributesResponse) {
    option (google.api.http).get               = "/outbe/allocationpool/tributes";
  }

}

// QueryParamsRequest is the request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is the response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params defines the parameters of the module.
  Params params = 1 [(gogoproto.nullable) = false, (amino.dont_omitempty) = true];
}

message QueryBlockEmissionRequest {
  int64 block_number = 1;
}

message QueryBlockEmissionResponse {
  string block_emission = 1;
}

message QueryEmissionRequest {
}

message QueryEmissionResponse {
  Emission emission = 1;
}

message QueryLimitRequest {
}

message QueryLimitResponse {
  string limit = 1;
}

// message QueryTotalSupplyRequest {
// }

// message QueryTotalSupplyResponse {
//   Supply total_supply = 1;
// }

message QueryTributesRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryTributesResponse {
	repeated Tribute tributes = 1  [(gogoproto.nullable) = false];
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}